# octavius-game

./: CMakeLists.txt  README.md  Render.cpp  Render.h  SlotMachine.cpp  Sound.cpp  Sound.h  Timer.cpp  Wheel.cpp  copy_resources_debug_x64.bat  copy_resources_debug_x86.bat  copy_resources_release_x64.bat  copy_resources_release_x86.bat  octavius.cpp  octavius.h
Classes/: Render.h  SlotMachine.h  Sound.h  Timer.h  Wheel.h
